# moc-ppgcc-2025

./: README.md  pyproject.toml  requirements.txt
atividade01/: main.tex  sbc-template.sty
atividade02/: heuristics.py  main.ipynb  utils.py
