[project]
name = "moc"
version = "0.1.0"
description = "Atividades do curso de Metaheurísticas para Otimização Combinatória do PPGCC-UFPA, realizado no período 2025.1."
authors = [
    {name = "Helder Matos",email = "msthelder@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.7"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
